--- a/modules/oxide/src/less/theme/components/form/textfield.less
+++ b/modules/oxide/src/less/theme/components/form/textfield.less
@@ -46,6 +46,7 @@
     font-size: @textfield-font-size;
     line-height: @textfield-line-height;
     margin: 0;
+    min-height: @textfield-height;
     outline: @textfield-outline;
     padding: @textfield-pad-y @textfield-pad-x;
     resize: none;
